--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mangadex-full-api": "^4.0.0",
     "puppeteer": "^5.5.0",
     "underscore": "^1.12.0"
   },
